create example component

--- a/src/app/core/design-system/skeleton/side/normal/normal.component.html
+++ b/src/app/core/design-system/skeleton/side/normal/normal.component.html
@@ -1,11 +1,12 @@
 <!-- Navigation -->
-
+<ds-side-nav [navItems]="navItems" *ngIf="navOpened"></ds-side-nav>
 
 <!-- Wrapper -->
 <div>
     <!-- Header -->
-    <header class="">
-        <button>toggle nav</button>
+    <header>
+        <button (click)="navOpened = !navOpened">toggle nav</button>
+        <div>header</div>
     </header>
 
     <!-- Content -->
