--- a/src/app/core/design-system/skeleton/side/left/left-side-bar-skeleton.component.html
+++ b/src/app/core/design-system/skeleton/side/left/left-side-bar-skeleton.component.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<ds-side-nav [navItems]="navItems" *ngIf="navOpened"></ds-side-nav>
+<ds-side-bar [navItems]="navItems" *ngIf="navOpened"></ds-side-bar>
 
 <!-- Wrapper -->
 <div>
