--- a/src/app/core/design-system/nav/side/expand/expand-side-nav-item.component.html
+++ b/src/app/core/design-system/nav/side/expand/expand-side-nav-item.component.html
@@ -51,5 +51,5 @@
     </div>
 
     <!-- arow -->
-    <div class="side-nav-item-arrow">{{ expanded ? 'arrow up' : 'arrow down' }}</div>
+    <div class="side-nav-item-arrow">{{ expanded ? 'up' : 'down' }}</div>
 </ng-template>
