--- a/src/app/core/design-system/skeleton/side/left/left-side-bar-skeleton.component.css
+++ b/src/app/core/design-system/skeleton/side/left/left-side-bar-skeleton.component.css
@@ -1,7 +1,3 @@
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
 
 .sidebar {
     background-color: #333;
@@ -13,14 +9,13 @@ body {
     left: 0;
     bottom: 0;
     z-index: 1000;
-    width: auto;
 }
 
 .wrapper {
     margin-left: 400px;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
 }
 
 header, footer {
